--- a/.github/workflows/release-icon.yml
+++ b/.github/workflows/release-icon.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install inkscape
-        run: apt update && apt install inkscape
+        run: sudo apt update && sudo apt install inkscape
       - name: Run build script
         run: chmod +x ./build.sh && ./build.sh
       - name: Archive icons
